--- a/main.css
+++ b/main.css
@@ -473,3 +473,421 @@ body{
     margin-bottom: 30px;
 }
 
+@media only screen and (max-width: 600px){
+    body{
+        width: 100%
+    }
+
+    #main{
+        width: 100%;
+    }
+
+    #main-div{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #drop-area, #input1, #input2, #input3, #b1, #image-holder{
+        max-width: 100%;
+    }
+
+    #p1{
+        max-width: 100%;
+        font-size: 28px;
+    }
+
+    #p2{
+        font-size: 18px;
+    }
+
+    #p3, #p4, #p5, #p6, #text1, #vd1, #vd2, #vd3{
+        width: 100%;
+        text-align: left;
+    }
+
+    #text1{
+        font-size: 11px;
+    }
+
+    #svg3 img{
+        max-width: 100%;
+        height: 20vh;
+    }
+
+    #svg1 img{
+        width: 60vw;
+        height: 20vh;
+    }
+
+    #svg2 img{
+        width: 20vw;
+        height: 20vh;
+    }
+
+    #svg1{
+        max-width: 100%;
+        margin-left: 40vw;
+        margin-top: -10vw;
+    }
+
+    #svg2{
+        max-width: 100%;
+        margin-left: 20vw;
+    }
+
+    #svg4{
+        background: url('./assets/images/pattern-lines.svg');
+        background-size: auto;
+        max-width: 100%;
+    }
+
+    #ticket{
+        max-width: 100%;
+        width: 90%;
+        margin-top: 4vh;
+        min-height: 33vh;
+        margin-left: 5vw;
+        padding: 0vh 3vh
+    }
+
+    #ticket-info{
+        margin-top: 3vh;
+    }
+
+    #ticket-num{
+        margin-left: 58vw;
+        height: 5vh;
+        width: 22vw;
+        font-size: 20px;
+        margin-top: 15vh;
+        position: absolute;
+        z-index: 3;
+    }
+
+    #section1{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #conf-details img{
+        width: 120px;
+        height: 30px;
+    }
+
+    #conf-details p{
+        font-size: 14px;
+        width: 100%;
+        margin-left: 6vw;
+    }
+
+    #conf-details{
+        margin-top: 5vh;
+    }
+
+    #pro-pic{
+        width: 50px;
+        height: 50px;
+    }
+
+    #pes-details{
+        padding-top: 4vh;
+    }
+
+    #cust{
+        padding-top: 0vh;
+    }
+
+    #line1, #line2{
+        font-size: 35px;
+    }
+
+    #line1, #line2, #line3{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width:840px) {
+    body{
+        width: 100%
+    }
+
+    #main{
+        width: 100%;
+    }
+
+    #main-div{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #drop-area, #input1, #input2, #input3, #b1, #image-holder{
+        max-width: 100%;
+    }
+
+    #p1{
+        max-width: 100%;
+        font-size: 28px;
+    }
+
+    #p2{
+        font-size: 18px;
+    }
+
+    #p3, #p4, #p5, #p6, #text1, #vd1, #vd2, #vd3{
+        width: 100%;
+        text-align: left;
+        padding-left: 10vw;
+    }
+
+    #text1{
+        font-size: 11px;
+    }
+
+    #svg3 img{
+        max-width: 100%;
+        height: 20vh;
+    }
+
+    #svg1 img{
+        width: 60vw;
+        height: 20vh;
+    }
+
+    #svg2 img{
+        width: 20vw;
+        height: 20vh;
+    }
+
+    #svg1{
+        max-width: 100%;
+        margin-left: 40vw;
+        margin-top: -10vw;
+    }
+
+    #svg2{
+        max-width: 100%;
+        margin-left: 20vw;
+    }
+
+    #svg4{
+        background: url('./assets/images/pattern-lines.svg');
+        background-size: auto;
+        max-width: 100%;
+    }
+
+    #ticket{
+        max-width: 100%;
+        width: 90%;
+        margin-top: 4vh;
+        min-height: 33vh;
+        margin-left: 5vw;
+        padding: 0vh 12vh
+    }
+
+    #ticket-info{
+        margin-top: 3vh;
+    }
+
+    #ticket-num{
+        margin-left: 52vw;
+        height: 5vh;
+        width: 22vw;
+        font-size: 5vw;
+        margin-top: 15vh;
+        position: absolute;
+        z-index: 3;
+    }
+
+    #section1{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #conf-details img{
+        width: 33vw;
+        height: 5vh;
+    }
+
+    #conf-details p{
+        font-size: 14px;
+        width: 100%;
+        margin-left: 6vw;
+    }
+
+    #conf-details{
+        margin-top: 5vh;
+    }
+
+    #pro-pic{
+        width: 13vw;
+        height: 10vh;
+    }
+
+    #pes-details{
+        padding-top: 4vh;
+    }
+
+    #cust{
+        padding-top: 1vh;
+        font-size: 3vw;
+    }
+
+    #line1, #line2{
+        font-size: 35px;
+    }
+
+    #line1, #line2, #line3{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (min-width: 840px) and (max-width:1040px) {
+    body{
+        width: 100%
+    }
+
+    #main{
+        width: 100%;
+    }
+
+    #main-div{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #drop-area, #input1, #input2, #input3, #b1, #image-holder{
+        max-width: 100%;
+    }
+
+    #p1{
+        max-width: 100%;
+        font-size: 28px;
+    }
+
+    #p2{
+        font-size: 18px;
+    }
+
+    #p3, #p4, #p5, #p6, #text1, #vd1, #vd2, #vd3{
+        width: 100%;
+        text-align: left;
+        padding-left: 21vw;
+    }
+
+    #text1{
+        font-size: 11px;
+    }
+
+    #svg3 img{
+        max-width: 100%;
+        height: 20vh;
+    }
+
+    #svg1 img{
+        width: 60vw;
+        height: 20vh;
+    }
+
+    #svg2 img{
+        width: 20vw;
+        height: 20vh;
+    }
+
+    #svg1{
+        max-width: 100%;
+        margin-left: 40vw;
+        margin-top: -10vw;
+    }
+
+    #svg2{
+        max-width: 100%;
+        margin-left: 20vw;
+    }
+
+    #svg4{
+        background: url('./assets/images/pattern-lines.svg');
+        background-size: auto;
+        max-width: 100%;
+    }
+
+    #ticket{
+        max-width: 100%;
+        width: 90%;
+        margin-top: 4vh;
+        min-height: 33vh;
+        margin-left: 5vw;
+        padding: 0vh 25vh
+    }
+
+    #ticket-info{
+        margin-top: 1vh;
+    }
+
+    #ticket-num{
+        margin-left: 35vw;
+        height: 5vh;
+        width: 22vw;
+        font-size: 5vw;
+        margin-top: 17vh;
+        position: absolute;
+        z-index: 3;
+    }
+
+    #section1{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #conf-details img{
+        width: 33vw;
+        height: 5vh;
+    }
+
+    #conf-details p{
+        font-size: 14px;
+        width: 100%;
+        margin-left: 6vw;
+    }
+
+    #conf-details{
+        margin-top: 5vh;
+    }
+
+    #pro-pic{
+        width: 9vw;
+        height: 9vw;
+    }
+
+    #pes-details{
+        padding-top: 4vh;
+    }
+
+    #cust{
+        padding-top: 1vh;
+        font-size: 3vw;
+    }
+
+    #line1, #line2{
+        font-size: 35px;
+    }
+
+    #line1, #line2, #line3{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+
+
